# agent

./: .env  .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  base.py  code_guardrail.py  docker-compose.yml  llm.py  models.py  multifile_repeat_process.py  planner.py  planner_system_msg.py  pyproject.toml  router.py  sandbox.py  text_doc.py  tools.py  worker.py  worker_context.py
backend/: Dockerfile  README.md  main.py  pyproject.toml  test_async_logging.py
backend/docs/: file_management.md
backend/docs/database/: README.md  data_dictionary.md  erd.md  migration_guide.md  performance_guide.md  schema_evolution.md
backend/scripts/: start-jupyter.sh
backend/src/agent/: README.md  __init__.py
backend/src/agent.egg-info/: PKG-INFO  requires.txt
backend/test/: test.ipynb
backend/tests/: README.md  run_all_tests.py  run_integration_tests.py  run_tests.py  run_unit_tests.py  test.ipynb  test_background_processor_efficiency.py  test_concurrent_planner_execution.py  test_file_path_database.py  test_file_storage.py  test_multiple_conversations_concurrent.py  test_planner_cleanup.py  test_websocket_updates_execution.py
backend/tests/integration/: test_concurrent_planner_execution.py  test_fastapi_immediate_response.py  test_multiple_conversations_concurrent.py
backend/tests/unit/: __init__.py  test_api_endpoints.py  test_async_validation.py.backup  test_database_operations.py  test_database_operations.py.backup  test_file_manager.py  test_file_manager.py.backup  test_import_structure.py  test_import_structure.py.backup  test_message_manager.py  test_router_agent.py  test_router_agent.py.backup  test_task_execution.py  (+2 more)
(+115 files in other folders)
