[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent"
version = "0.1.0"
description = "Initial setup"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.59.0",
    "duckdb>=1.3.2",
    "fastapi>=0.116.1",
    "fastmcp>=2.10.6",
    "google-genai>=1.28.0",
    "ipykernel>=6.30.0",
    "jupyter>=1.1.1",
    "openai>=1.97.1",
    "pandas>=2.3.1",
    "pillow>=11.3.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pymupdf>=1.26.3",
    "pymupdf4llm>=0.0.27",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.35.0",
    "websockets>=15.0.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
agent = ["*.json", "*.yaml", "*.yml"]

[dependency-groups]
dev = [
    "ipykernel>=6.30.0",
    "jupyter>=1.1.1",
    "jupyterlab>=4.0.0",
    "notebook>=7.0.0",
    "pyzmq>=27.0.0",
]
